@@ -1,5 +1,9 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.558 2006/02/07 17:08:54 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.559 2006/02/07 18:20:39 wolf31o2 Exp $
+
+  07 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/support/livecdfs-update.sh:
+  Change net.ethX links to link to net.lo instead of net.eth0.
 
   07 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   examples/stage4_template.spec:
